// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a TextField control 1`] = `
<Wrapper
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className="test-class"
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  initialValue=""
  left={null}
  location="none"
  max="any"
  maxLength={null}
  min="any"
  minHeight={null}
  minLength={null}
  minWidth="1em"
  noborder={false}
  noedit={false}
  nohover={false}
  noripple={false}
  nospinner={false}
  notheme={false}
  notooltip={false}
  obj="TextField"
  onBlur={[Function]}
  onChange={[Function]}
  onClear={[Function]}
  onError={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onValidation={[Function]}
  padding={null}
  reset={false}
  selected={false}
  size={null}
  sizing="normal"
  step="any"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  type="text"
  useclear={false}
  usevalidation={false}
  validators={Array []}
  visible={true}
  width={null}
  xcss={null}
>
  <TextField__TextfieldContainerView
    className="ui-textfield-container"
    id="TextField-0"
    minWidth="3rem"
    width={null}
  >
    <TextField__TextFieldView
      className="ui-textfield"
      disabled={false}
      noborder={false}
      visible={true}
    >
      <TextField__StyledInput
        backgroundColor={null}
        borderColor={null}
        bottom={null}
        className="test-class"
        color={null}
        contentEditable={false}
        controlled={true}
        direction="right"
        disabled={false}
        err={null}
        errorMessage={null}
        focus={false}
        height={null}
        id={null}
        initialValue=""
        left={null}
        location="none"
        max="any"
        maxLength={null}
        min="any"
        minHeight={null}
        minLength={null}
        minWidth="1em"
        noborder={false}
        noedit={false}
        nohover={false}
        noripple={false}
        nospinner={false}
        notheme={false}
        notooltip={false}
        obj="TextField"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        padding={null}
        selected={false}
        size={null}
        sizing="normal"
        step="any"
        style={Object {}}
        testing={true}
        theme={null}
        tooltip={null}
        top={null}
        type="text"
        useclear={false}
        usevalidation={false}
        value=""
        visible={true}
        width={null}
        xcss={null}
      />
    </TextField__TextFieldView>
  </TextField__TextfieldContainerView>
</Wrapper>
`;

exports[`Test disabling of a TextField control 1`] = `
<TextField
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={true}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  initialValue=""
  left={null}
  location="none"
  max="any"
  maxLength={null}
  min="any"
  minHeight={null}
  minLength={null}
  minWidth="1em"
  noborder={false}
  noedit={false}
  nohover={false}
  noripple={false}
  nospinner={false}
  notheme={false}
  notooltip={false}
  obj="TextField"
  onBlur={[Function]}
  onChange={[Function]}
  onClear={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onValidation={[Function]}
  padding={null}
  selected={false}
  size={null}
  sizing="normal"
  step="any"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  type="text"
  useclear={false}
  usevalidation={false}
  validators={Array []}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test retrieval of TextField props object 1`] = `
Object {
  "backgroundColor": null,
  "borderColor": null,
  "bottom": null,
  "children": null,
  "className": null,
  "color": null,
  "contentEditable": false,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": null,
  "focus": false,
  "height": null,
  "id": null,
  "initialValue": "",
  "left": null,
  "location": "none",
  "max": "any",
  "maxLength": null,
  "min": "any",
  "minHeight": null,
  "minLength": null,
  "minWidth": "1em",
  "noborder": false,
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "nospinner": false,
  "notheme": false,
  "notooltip": false,
  "obj": "TextField",
  "onBlur": [Function],
  "onChange": [Function],
  "onClear": [Function],
  "onKeyDown": [Function],
  "onKeyPress": [Function],
  "onValidation": [Function],
  "padding": null,
  "selected": false,
  "size": null,
  "sizing": "normal",
  "step": "any",
  "style": Object {},
  "testing": true,
  "theme": null,
  "tooltip": null,
  "top": null,
  "type": "text",
  "useclear": false,
  "usevalidation": false,
  "validators": Array [],
  "visible": true,
  "width": null,
  "xcss": null,
}
`;

exports[`Test retrieval of TextField props object 2`] = `
Object {
  "children": null,
  "classes": b {
    "_classes": Map {
      "ui-textfield" => true,
    },
    "_clstr": "",
    "_delimiter": " ",
    "_dirty": true,
    "_obj": null,
    "delete": [Function],
    "reset": [Function],
  },
  "message": "",
  "messageType": 0,
  "minWidth": "",
  "previousValue": "",
  "sizing": "normal",
  "style": Object {},
  "valid": true,
  "value": "",
}
`;
